# spotdl

./: Cargo.toml  flake.nix
src/: authentication.rs  cli.rs  downloader.rs  errors.rs  main.rs
