[package]
name = "spotdl"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
directories = "6.0.0"
indicatif = "0.17.11"
librespot-audio = "0.6.0"
librespot-core = "0.6.0"
librespot-metadata = "0.6.0"
librespot-oauth = "0.6.0"
regex = "1.11.1"
tokio = {version = "1.45.0", features = ["full"]}
